@@ -1,3 +1,7 @@
+# 2024/01/21
+- Necromancer updates
+- UI lock button
+
 # 2024/01/20
 - Berserker updates
 - Monk updates
